--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #8ea7e9;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4f76dd;
+  --ifm-color-primary-dark: #4461b4;
+  --ifm-color-primary-darker: #394e8d;
+  --ifm-color-primary-darkest: #2e3b68;
+  --ifm-color-primary-light: #758be3;
+  --ifm-color-primary-lighter: #94a1e9;
+  --ifm-color-primary-lightest: #b0b8ef;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #8ea7e9;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #4f76dd;
+  --ifm-color-primary-dark: #4461b4;
+  --ifm-color-primary-darker: #394e8d;
+  --ifm-color-primary-darkest: #2e3b68;
+  --ifm-color-primary-light: #758be3;
+  --ifm-color-primary-lighter: #94a1e9;
+  --ifm-color-primary-lightest: #b0b8ef;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
